Issue #6695: Full garbage collection runs now clear the freelist of set objects. Initial patch by Matthias Troffaes.